# tom-benchmark

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  fly.toml  pyproject.toml  requirements.txt
.streamlit/: config.toml
tests/: conftest.py  test_adapters.py  test_cli.py  test_judge.py  test_loader.py  test_models.py  test_runner.py  test_scenario_schema.py  test_scorer.py  test_structured.py
tom_benchmark/: __init__.py  cli.py  exporter.py  judge.py  loader.py  models.py  runner.py  scorer.py  structured.py
tom_benchmark/adapters/: __init__.py  base.py  claude.py  openai.py
tom_benchmark/scenarios/: deception.json  emotional_inference.json  false_belief.json  higher_order_beliefs.json  indirect_request.json  knowledge_attr.json
